--- a/views/chatsapp.ejs
+++ b/views/chatsapp.ejs
@@ -11,12 +11,13 @@
     <div class="sidebar-heading"> ROOMS & USERS </div>
     <div class="list-group list-group-flush">
       <a href="#broadcast" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="broadcast" class="list-group-item list-group-item-action bg-light
-        font-weight-bold">
-        Broadcast Room </a>
-      <% for (let i=0; i <locals.users.length; i++) { %>
+        font-weight-bold ancTags">
+        Broadcast Room 
+        <span class="badge badge-pill badge-success newMessage hideUser" onclick="checkMsg()">New</span></a>
+      <% for (let i=0; i < locals.users.length; i++) { %>
       <a href="#<%=locals.users[i].username%>" data-toggle="collapse" role="button" aria-expanded="false"
         aria-controls="<%=locals.users[i].username%>" class="list-group-item list-group-item-action
-            bg-light userlist" data-username="<%=locals.users[i].username%>" data-socket="" onclick="check()">
+            bg-light userlist ancTags" data-username="<%=locals.users[i].username%>" data-socket="" onclick="check()">
         <button type="button" class="btn btn-default
             btn-circle status"></button>
         <%= locals.users[i].username %>
@@ -32,7 +33,7 @@
     <div class="container-fluid collapse" id="broadcast">
       <!-- CHAT WINDOW -->
       <div class="card card-body">
-        <div class="chat-window">
+        <div class="chat-window" id="tryy">
           <div class="chat-output"></div>
           <div class="typing"></div>
           <div class="notification"></div>
@@ -63,13 +64,22 @@
 <script>
   let clicked;
   $('.collapse').on('show.bs.collapse', function (e) {
-
     $('.collapse').each(function () {
       $(this).collapse('hide');
     });
-
     clicked = $(e.target).attr('id');
   });
+
+  $('.ancTags').on('click', function(e) {
+    
+    $('.ancTags').each(function () {
+      if(this !== e.target) {
+      $(this).removeClass('active');
+      }
+    })
+    $(e.target).toggleClass('active');
+    
+  })
 
   $('.collapse').on('hide.bs.collapse', function (e) {
     clicked = '';
@@ -110,7 +120,6 @@
       }
     }
   }
-  
 
   // Emit Online Notification to other users
   socket.on('connect', () => {
@@ -145,7 +154,7 @@
           sender: sender,
         });
         messageB.val('');
-        messageB.attr('placeholder', 'Message');
+        messageB.attr('placeholder', 'Message');    
       }
     }
   }
@@ -196,7 +205,8 @@
   socket.on('chat', (data) => {
     typingB.html('');
     outputB.append(`<p> <strong> ${data.sender} </strong>
-            ${data.message} </p>`);
+    ${data.message} </p>`);
+
   });
 
   function check() {
