--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
                         required></div>
                 <span id="errorMessage"></span>
                 <div class="form-group"><label class="form-control-label" for="password">Password:</label><input
-                        class="form-control" id="password" type="password" name="password" autocomplete="off" required>
+                        class="form-control" id="password" type="password" name="password" autocomplete="off" required maxlength="15">
                 </div>
                 <div class="form-group"><label class="form-control-label" for="repeat-password">Repeat
                         Password:</label><input class="form-control" id="repeat-password" type="password"
