--- a/views/chatsapp.ejs
+++ b/views/chatsapp.ejs
@@ -91,8 +91,8 @@
   });
 
   // Make Connection between Client and Server
-  // const socket = io.connect('http://ec6ce5f0.ngrok.io');
-  const socket = io.connect('http://localhost:3000');
+  const socket = io.connect('https://cg-chatsapp.herokuapp.com/');
+  // const socket = io.connect('http://localhost:3000');
 
   // Get elements from DOM
   const sender = '<%=locals.username%>';
