--- a/views/chatsapp.ejs
+++ b/views/chatsapp.ejs
@@ -1,19 +1,19 @@
 <% include header.ejs %>
 <div class="row my-1 mx-3">
   <div class="col-md-12">
-    <h2 class="text-center "> Welcome to the ChatsApp,
-      <%= locals.username %> ... </h2>
+    <h2 class="text-center">Welcome to the ChatsApp, <%=locals.username%>.</h2>
   </div>
 </div>
 <div class="d-flex" id="wrapper">
   <!-- SIDEBAR -->
   <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading"> ROOMS & USERS </div>
+    <div class="sidebar-heading"> BROADCAST & USERS </div>
     <div class="list-group list-group-flush">
-      <a href="#broadcast" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="broadcast" class="list-group-item list-group-item-action bg-light
-        font-weight-bold ancTags">
+      <a href="#broadcast" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="broadcast"
+      class="list-group-item list-group-item-action bg-light font-weight-bold ancTags">
         Broadcast Room 
-        <span class="badge badge-pill badge-success newMessage hideUser" onclick="checkMsg()">New</span></a>
+      <span class="badge badge-pill badge-success newMessage hideUser" onclick="checkMsg()">
+      New</span></a>
       <% for (let i=0; i < locals.users.length; i++) { %>
       <a href="#<%=locals.users[i].username%>" data-toggle="collapse" role="button" aria-expanded="false"
         aria-controls="<%=locals.users[i].username%>" class="list-group-item list-group-item-action
@@ -33,26 +33,24 @@
     <div class="container-fluid collapse" id="broadcast">
       <!-- CHAT WINDOW -->
       <div class="card card-body">
-        <div class="chat-window" id="tryy">
+        <div class="chat-window">
           <div class="chat-output"></div>
           <div class="typing"></div>
-          <div class="notification"></div>
         </div>
         <input class="chat-message" type="text" placeholder="Message" required />
         <button class="chat-send">Send</button>
       </div>
     </div>
     <!-- PRIVATE CHAT -->
-    <% for (let i=0; i <users.length; i++) { %>
-    <div class="container-fluid collapse
-            private" id="<%=users[i].username%>" data-socket="">
+    <% for (let i=0; i <locals.users.length; i++) { %>
+    <div class="container-fluid collapse private" id="<%=locals.users[i].username%>" data-socket="">
       <div class="card card-body">
         <div class="chat-window">
           <div class="chat-output">
           </div>
         </div>
-        <input class="chat-message" type="text" placeholder="Message" />
-        <button class="chat-send">Send</button>
+        <input class="chat-message" type="text" placeholder="Message"/>
+        <button class="chat-send"> Send </button>
       </div>
     </div>
     <% } %>
@@ -62,219 +60,106 @@
 <% include footer.ejs %>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  let clicked;
-  $('.collapse').on('show.bs.collapse', function (e) {
-    $('.collapse').each(function () {
-      $(this).collapse('hide');
-    });
-    clicked = $(e.target).attr('id');
-  });
+/* eslint-disable require-jsdoc */
 
-  $('.ancTags').on('click', function(e) {
-    
-    $('.ancTags').each(function () {
-      if(this !== e.target) {
+// Make Connection between Client and Server
+// const socket = io.connect('https://cg-chatsapp.herokuapp.com/');
+const socket = io.connect('http://localhost:3000');
+
+let activeChatWindow;
+
+// Collapse hide/show
+$('.collapse').on('show.bs.collapse', function(e) {
+  $('.collapse').each(function() {
+    $(this).collapse('hide');
+  });
+  activeChatWindow = $(e.target).attr('id');
+});
+
+$('.collapse').on('hide.bs.collapse', function(e) {
+  activeChatWindow = '';
+});
+
+// To show active chat window in the userlist..
+$('.ancTags').on('click', function(e) {
+  $('.ancTags').each(function() {
+    if (this !== e.target) {
       $(this).removeClass('active');
-      }
-    })
-    $(e.target).toggleClass('active');
-    
-  })
-
-  $('.collapse').on('hide.bs.collapse', function (e) {
-    clicked = '';
-  })
-
-  $('#menu-toggle').click(function (e) {
-    e.preventDefault();
-    $('#wrapper').toggleClass('toggled');
-  });
-
-  // Make Connection between Client and Server
-  const socket = io.connect('https://cg-chatsapp.herokuapp.com/');
-  // const socket = io.connect('http://localhost:3000');
-
-  // Get elements from DOM
-  const sender = '<%=locals.username%>';
-  const outputB = $('#broadcast').find('.chat-output');
-  const messageB = $('#broadcast').find('.chat-message');
-  const sendB = $('#broadcast').find('.chat-send');
-  const typingB = $('#broadcast').find('.typing');
-  const notiB = $('#broadcast').find('.notification');
-  // PRIVATE CHATS
-  const messageP = $('.private').find('.chat-message');
-  const sendP = $('.private').find('.chat-send');
-  const private = $('.private');
-  const newMessage = $('.newMessage');
-  // To get users from sidebar
-  const userlist = $('.userlist');
-  // Current user
-  const userInfo = {
-    sender: sender,
-  };
-
-  // Hide yourself from the userlist
-  function chupJao() {
-    for (let i = 0; i < userlist.length; i++) {
-      if (userlist[i].dataset.username.trim() == sender) {
-        userlist[i].classList.add('hideUser');
-      }
-    }
-  }
-
-  // Emit Online Notification to other users
-  socket.on('connect', () => {
-    // to save our own socket id
-    userInfo.socket = socket.id;
-    socket.emit('newUser', userInfo);
-    chupJao();
-  });
-
-  // Update already online users
-  socket.on('onlineUsers', (data) => {
-    for (let j = 0; j < data.length; j++) {
-      for (let i = 0; i < userlist.length; i++) {
-        if (userlist[i].dataset.username.trim() == data[j].sender) {
-          userlist[i].querySelector('.status').classList.add('online');
-          userlist[i].dataset.socket = data[j].socket;
-          private[i].dataset.socket = data[j].socket;
-        }
-      }
     }
   });
+  $(e.target).toggleClass('active');
+});
 
-  // Add Event Listeners and Emit Events
-  function sendBM() {
-    if (event instanceof MouseEvent || event.keyCode === 13) {
-      if (messageB.val().trim() == '') {
-        messageB.attr('placeholder', 'Message cannot be blank');
-      }
-      else {
-        socket.emit('chat', {
-          message: messageB.val(),
-          sender: sender,
-        });
-        messageB.val('');
-        messageB.attr('placeholder', 'Message');    
-      }
-    }
-  }
+$('#menu-toggle').click(function(e) {
+  e.preventDefault();
+  $('#wrapper').toggleClass('toggled');
+});
 
-  function sendPM() {
-    let messageBox;
-    if (event.keyCode === 13) {
-      messageBox = $(this);
-      callback()
-    }
-    else if (event instanceof MouseEvent) {
-      messageBox = $(this).siblings('.chat-message');
-      callback()
-    }
-
-    function callback() {
-      if (messageBox.val().trim() == '') {
-        messageBox.attr('placeholder', 'Message cannot be blank');
-      }
-      else {
-        socket.emit('PM', {
-          message: messageBox.val(),
-          sender: userInfo.sender,
-          senderId: userInfo.socket,
-          sendTo: messageBox.parent('div').parent('div').attr('data-socket'),
-          toUser: messageBox.parent('div').parent('div').attr('id'),
-        });
-        messageBox.val('');
-        messageBox.attr('placeholder', 'Message');
-      }
-    }
-  }
-
-
-  sendB.bind('click', sendBM);
-  messageB.bind('keyup', sendBM);
-  sendP.bind('click', sendPM);
-  messageP.bind('keyup', sendPM);
-
-  // // Broadcast Typing Message
-  messageB.bind('keypress', () => {
-    socket.emit('typing', {
-      sender: sender,
-    });
-  });
-  function autoScroll() {
-  let chatwindows = $('.chat-window');
-  for(let i=0; i<chatwindows.length; i++) {
-    $(".chat-window").stop().animate({ scrollTop: $(".chat-window")[i].scrollHeight}, 1000);
-
-  }
-  
+// Onclick functions to hide newMessage badge
+function check() {
+  $(event.target).find('.newMessage').addClass('hideUser');
 }
 
-  // // Listen to Events
-  socket.on('chat', (data) => {
-    typingB.html('');
-    outputB.append(`<p> <strong> ${data.sender} </strong>
-    ${data.message} </p>`);
-   $(".chat-window").stop().animate({ scrollTop: $(".chat-window")[0].scrollHeight}, 1000);
-  // autoScroll();
-  });
+function checkMsg() {
+  $(event.target).addClass('hideUser');
+}
 
-  function check() {
-    $(event.target).find('.newMessage').addClass('hideUser');
+// Get elements from DOM
+const sender = '<%=locals.username%>';
+const outputB = $('#broadcast').find('.chat-output');
+const messageB = $('#broadcast').find('.chat-message');
+const sendB = $('#broadcast').find('.chat-send');
+const typingB = $('#broadcast').find('.typing');
+
+// PRIVATE CHATS -- these will be arrays.
+const messageP = $('.private').find('.chat-message');
+const sendP = $('.private').find('.chat-send');
+const private = $('.private');
+// includes private/broadcast new message badge
+const newMessage = $('.newMessage');
+// To get users from sidebar
+const userlist = $('.userlist');
+
+// Logged in user (YOU)
+const userInfo = {
+  sender: sender,
+};
+
+// Hide logged in user (YOU) from the userlist
+function chupJao() {
+  for (let i = 0; i < userlist.length; i++) {
+    if (userlist[i].dataset.username.trim() == sender) {
+      userlist[i].classList.add('hideUser');
+    }
   }
+}
 
-  function checkMsg() {
-    $(event.target).addClass('hideUser');
+// Emit Online Notification to other users
+socket.on('connect', () => {
+  // To save socket ID of logged in user (YOU)
+  userInfo.socket = socket.id;
+  socket.emit('newUser', userInfo);
+  chupJao();
+});
+
+// Update already online users from server
+socket.on('onlineUsers', (data) => {
+  for (let j = 0; j < data.length; j++) {
+    for (let i = 0; i < userlist.length; i++) {
+      if (userlist[i].dataset.username.trim() == data[j].sender) {
+        userlist[i].querySelector('.status').classList.add('online');
+        userlist[i].dataset.socket = data[j].socket;
+        private[i].dataset.socket = data[j].socket;
+      }
+    }
   }
+});
 
-
-  socket.on('PMsuccess', (data) => {
-    let from;
-    for (i = 0; i < userlist.length; i++) {
-      if (userlist[i].dataset.username == data.sender) {
-        from = '#' + userlist[i].dataset.username.trim();
-        if (clicked != data.sender) {
-          userlist[i].querySelector('.newMessage').classList.remove('hideUser');
-        }
-      }
-    }
-    $(from).find('.chat-output').append(`<p> 
-              <strong> ${data.sender} </strong> ${data.message} </p>`);
-               autoScroll();
-  });
-
-  socket.on('PMupdate', (data) => {
-    let from;
-    for (i = 0; i < userlist.length; i++) {
-      if (userlist[i].dataset.username == data.toUser) {
-        from = '#' + userlist[i].dataset.username.trim();
-      }
-    }
-    $(from).find('.chat-output').append(`<p> 
-                <strong> ${data.sender} </strong> ${data.message} </p>`);
-               autoScroll();
-                 });
-
-  socket.on('PMerror', (data) => {
-    let from;
-    for (i = 0; i < userlist.length; i++) {
-      if (userlist[i].dataset.username == data.toUser) {
-        from = '#' + userlist[i].dataset.username.trim();
-      }
-    }
-    $(from).find('.chat-output').append(`<p> 
-                  <strong> Cannot send a message to offline user. </strong> </p>`);
-  });
-
-  socket.on('typing', (data) => {
-    typingB.html(`<p> <em> ${data.sender} is typing a message..
-                  </em> </p>`);
-  });
-
-  socket.on('newUser', (data) => {
-    let oldUser;
-    if(data !== '') {
-      outputB.append(`<p> ${data.sender} is online`);
+// Listen to newUser event/notification
+socket.on('newUser', (data) => {
+  let oldUser;
+  if (data !== '') {
+    outputB.append(`<p> ${data.sender} is online`);
     for (let i = 0; i < userlist.length; i++) {
       if (userlist[i].dataset.username.trim() == data.sender) {
         userlist[i].querySelector('.status').classList.add('online');
@@ -283,37 +168,154 @@
         oldUser = true;
       }
     }
-    if(!oldUser){
+    // To update newly registered users while the socket was already on(if needed)
+    if (!oldUser) {
       location.reload();
     }
-    }
-  });
+  }
+});
 
-  socket.on('userLeft', (data) => {
-    if (data !== 'transport close') {
-      outputB.append(`<p> ${data} is offline`);
-      for (let i = 0; i < userlist.length; i++) {
-        if (userlist[i].dataset.username.trim() == data) {
-          userlist[i].querySelector('.status').classList.remove('online');
-          userlist[i].dataset.socket = '';
-          private[i].dataset.socket = '';
-        }
+// Listen to user offline event/notification
+socket.on('userLeft', (data) => {
+  if (data !== 'transport close') {
+    outputB.append(`<p> ${data} is offline`);
+    for (let i = 0; i < userlist.length; i++) {
+      if (userlist[i].dataset.username.trim() == data) {
+        userlist[i].querySelector('.status').classList.remove('online');
+        userlist[i].dataset.socket = '';
+        private[i].dataset.socket = '';
       }
     }
+  }
+});
+
+// Setup functions to send broadcast message
+function sendBM() {
+  if (event instanceof MouseEvent || event.keyCode === 13) {
+    if (messageB.val().trim() == '') {
+      messageB.attr('placeholder', 'Message cannot be blank');
+    } else {
+      socket.emit('chat', {
+        message: messageB.val(),
+        sender: sender,
+      });
+      messageB.val('');
+      messageB.attr('placeholder', 'Message');
+    }
+  }
+}
+
+// Add Event Listeners and Emit Events
+sendB.bind('click', sendBM);
+messageB.bind('keyup', sendBM);
+
+// Listen to Broadcast Chat Event..
+socket.on('chat', (data) => {
+  typingB.html('');
+  outputB.append(`<p> <strong> ${data.sender} </strong>
+    ${data.message} </p>`);
+    // Auto Scroll
+  $('.chat-window').stop().animate({
+    scrollTop: $('.chat-window')[0].scrollHeight}, 1000);
+});
+
+// Broadcast Typing Message
+messageB.bind('keypress', () => {
+  socket.emit('typing', {
+    sender: sender,
   });
+});
 
-  socket.on('multipleTabs', () => {
-    window.location = '/multipleTabs';
-  });
+// Listen to Typing Socket
+socket.on('typing', (data) => {
+  typingB.html(`<p> <em> ${data.sender} is typing a message..</em> </p>`);
+});
 
+//PRIVATE MESSAGES SETUP
+// Setup function to send private message
+function sendPM() {
+  let messageBox;
+  if (event.keyCode === 13) {
+    messageBox = $(this);
+    callback();
+  } else if (event instanceof MouseEvent) {
+    messageBox = $(this).siblings('.chat-message');
+    callback();
+  }
 
-  // Send user Info when user disconnects.
-  socket.on('disconnect', () => {
+  function callback() {
+    if (messageBox.val().trim() == '') {
+      messageBox.attr('placeholder', 'Message cannot be blank');
+    } else {
+      socket.emit('PM', {
+        message: messageBox.val(),
+        sender: userInfo.sender,
+        senderId: userInfo.socket,
+        sendTo: messageBox.parent('div').parent('div').attr('data-socket'),
+        toUser: messageBox.parent('div').parent('div').attr('id'),
+      });
+      messageBox.val('');
+      messageBox.attr('placeholder', 'Message');
+    }
+  }
+}
 
-  });
+sendP.bind('click', sendPM);
+messageP.bind('keyup', sendPM);
+
+function autoScroll(from) {
+  const chatWindow = $(from).find('.chat-window');
+    $(chatWindow).stop().animate({scrollTop: $(chatWindow)[0].scrollHeight}, 1000);
+}
+
+socket.on('PMsuccess', (data) => {
+  let from;
+  for (i = 0; i < userlist.length; i++) {
+    if (userlist[i].dataset.username == data.sender) {
+      from = '#' + userlist[i].dataset.username.trim();
+      if (activeChatWindow != data.sender) {
+        userlist[i].querySelector('.newMessage').classList.remove('hideUser');
+      }
+    }
+  }
+  $(from).find('.chat-output').append(`<p> 
+  <strong> ${data.sender} </strong> ${data.message} </p>`);
+  autoScroll(from);
+});
+
+socket.on('PMupdate', (data) => {
+  let from;
+  for (i = 0; i < userlist.length; i++) {
+    if (userlist[i].dataset.username == data.toUser) {
+      from = '#' + userlist[i].dataset.username.trim();
+    }
+  }
+  $(from).find('.chat-output').append(`<p> 
+  <strong> ${data.sender} </strong> ${data.message} </p>`);
+  autoScroll(from);
+});
+
+socket.on('PMerror', (data) => {
+  let from;
+  for (i = 0; i < userlist.length; i++) {
+    if (userlist[i].dataset.username == data.toUser) {
+      from = '#' + userlist[i].dataset.username.trim();
+    }
+  }
+  $(from).find('.chat-output').append(`<p> 
+  <strong> Cannot send a message to offline user. </strong> </p>`);
+  autoScroll(from);
+});
+
+// If user tries to open multiple tabs while user is active on one browser
+socket.on('multipleTabs', () => {
+  window.location = '/multipleTabs';
+});
+
+// Send user Info when user disconnects.
+socket.on('disconnect', () => {
+});
 
 </script>
-
 </body>
-
 </html>
