--- a/views/multipleTabs.ejs
+++ b/views/multipleTabs.ejs
@@ -1,5 +1,5 @@
-
-<div class="container">
+<% include header.ejs %>
+    <div class="container">
     <div class="row">
         <div class="col-md-12">
             <h1 class="lead" style="text-align: center; color: rgb(217, 26, 35);">
@@ -7,5 +7,5 @@
         </div>
     </div>
     </div>
-  </body>
-  </html>
+</body>
+</html>
